--- a/index.html
+++ b/index.html
@@ -5,6 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header content-section">
+      <nav class="header__menu">
+        <ul class="header__menu-list">
+          <li
+            class="header__menu-item header__menu-item-active header__menu-link-nomark"
+          >
+            <a class="header__menu-link"> главная </a>
+          </li>
+          <li сlass="header__menu-item">
+            <a href="#0" class="header__menu-link"> посмотреть лоты </a>
+          </li>
+          <li lass="header__menu-item">
+            <a href="#0" class="header__menu-link"> об аукционе </a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header__logo">
+        <img
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="Логотип проекта"
+        />
+      </a>
+      <div class="header__contacts">
+        <a href="#0" class="header__contacts-link"> +9 999 555 5555 </a>
+        <a href="#0" class="header__contacts-link"> info@sobaka.ge </a>
+        <p class="header__contacts-link header__adress">
+          наб. Принсенграхт 263-265,<br />Амстердам
+        </p>
+      </div>
+    </header>
+    <main class="content">
+      <section class="cover content-section"></section>
+      <section class="lots content-section"></section>
+      <section class="about content-section"></section>
+    </main>
+    <footer class="footer content-section"></footer>
+  </body>
 </html>
