Корректировка синтаксических ошибок

--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
   </head>
   <body>
     <header class="header content-section">
-      <nav class="header__menu">
+      <nav>
         <ul class="header__menu-list">
-          <li
-            class="header__menu-item header__menu-item-active header__menu-link-nomark"
-          >
-            <a class="header__menu-link"> главная </a>
+          <li class="header__menu-item  header__menu-link-nomark  .header__menu-item-active">
+            <a href="#0" class="header__menu-link"> главная </a>
           </li>
           <li сlass="header__menu-item">
             <a href="#0" class="header__menu-link"> посмотреть лоты </a>
           </li>
-          <li lass="header__menu-item">
+          <li сlass="header__menu-item">
             <a href="#0" class="header__menu-link"> об аукционе </a>
           </li>
         </ul>
