--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <header class="header content-section">
       <nav>
         <ul class="header__menu-list">
-          <li class="header__menu-item  header__menu-link-nomark  .header__menu-item-active">
+          <li class="header__menu-item  header__menu-link-nomark  header__menu-item-active">
             <a href="#0" class="header__menu-link"> главная </a>
           </li>
-          <li сlass="header__menu-item">
+          <li>
             <a href="#0" class="header__menu-link"> посмотреть лоты </a>
           </li>
-          <li сlass="header__menu-item">
+          <li>
             <a href="#0" class="header__menu-link"> об аукционе </a>
           </li>
         </ul>
@@ -32,8 +32,8 @@
         />
       </a>
       <div class="header__contacts">
-        <a href="#0" class="header__contacts-link"> +9 999 555 5555 </a>
-        <a href="#0" class="header__contacts-link"> info@sobaka.ge </a>
+        <a href="tel:+99995555555 class="header__contacts-link"> +9 999 555 5555 </a>
+        <a href="mailto:info@sobaka.ge" class="header__contacts-link"> info@sobaka.ge </a>
         <p class="header__contacts-link header__adress">
           наб. Принсенграхт 263-265,<br />Амстердам
         </p>
