--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <header class="header content-section">
       <nav>
         <ul class="header__menu-list">
-          <li class="header__menu-item  header__menu-link-nomark">
-            <a href="#0" class=" header__menu-link-home "> главная </a>
+          <li class="header__menu-item  header__links-list-item_no-bullit">
+            <a href="#0" class=" header__link_active "> главная </a>
           </li>
           <li>
-            <a href="#0" class="header__menu-link"> посмотреть лоты </a>
+            <a href="#0" class="header__link"> посмотреть лоты </a>
           </li>
           <li>
-            <a href="#0" class="header__menu-link"> об аукционе </a>
+            <a href="#0" class="header__link"> об аукционе </a>
           </li>
         </ul>
       </nav>
@@ -40,7 +40,25 @@
       </div>
     </header>
     <main class="content">
-      <section class="cover content-section"></section>
+      <section class="cover content-section">
+        <div class="overlay"></div>
+        <h1 class="cover__title">
+          <span class="accent-span"
+            >о<span class="letter-spacing-extended">но</span></span>
+          <span class="accent-span text_center"
+            >те<span class="letter-spacing-extended">бе</span></span>
+          <span class="accent-span text_right"
+            ><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
+        </h1>
+
+            <div class="form-content">
+              <div class="form-item">
+                <span class="text-style text">Аукцион    вещей,      в    которые    никто    не     верил</span>
+              </div>
+              <div class="bet-button">
+                <button class=" text-style button">Сделать ставку</button>
+              </div>
+            </div>
       <section class="lots content-section"></section>
       <section class="about content-section"></section>
     </main>
