--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="header content-section">
       <nav>
         <ul class="header__menu-list">
-          <li class="header__menu-item  header__links-list-item_no-bullit">
-            <a href="#0" class=" header__link_active "> главная </a>
+          <li class="header__menu-item header__links-list-item_no-bullit">
+            <a href="#0" class="header__link_active"> главная </a>
           </li>
           <li>
             <a href="#0" class="header__link"> посмотреть лоты </a>
@@ -32,8 +32,12 @@
         />
       </a>
       <div class="header__contacts">
-        <a href="tel:+99995555555" class="header__contacts-link"> +9 999 555 5555 </a>
-        <a href="mailto:info@sobaka.ge" class="header__contacts-link"> info@sobaka.ge </a>
+        <a href="tel:+99995555555" class="header__contacts-link">
+          +9 999 555 5555
+        </a>
+        <a href="mailto:info@sobaka.ge" class="header__contacts-link">
+          info@sobaka.ge
+        </a>
         <p class="header__contacts-link header__adress">
           наб. Принсенграхт 263-265,<br />Амстердам
         </p>
@@ -44,21 +48,29 @@
         <div class="overlay"></div>
         <h1 class="cover__title">
           <span class="accent-span"
-            >о<span class="letter-spacing-extended">но</span></span>
+            >о<span class="letter-spacing-extended">но</span></span
+          >
           <span class="accent-span text_center"
-            >те<span class="letter-spacing-extended">бе</span></span>
+            >те<span class="letter-spacing-extended">бе</span></span
+          >
           <span class="accent-span text_right"
-            ><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
+            ><span class="letter-spacing-extended">н</span>ад<span
+              class="no-letter-spacing"
+              >о</span
+            ></span
+          >
         </h1>
-
-            <div class="form-content">
-              <div class="form-item">
-                <span class="text-style text">Аукцион    вещей,      в    которые    никто    не     верил</span>
-              </div>
-              <div class="bet-button">
-                <button class=" text-style button">Сделать ставку</button>
-              </div>
-            </div>
+        <div class="form-content">
+          <div class="form-item">
+            <span class="text-style text"
+              >Аукцион вещей, в которые никто не верил</span
+            >
+          </div>
+          <div class="bet-button">
+            <button class="text-style button">Сделать ставку</button>
+          </div>
+        </div>
+      </section>
       <section class="lots content-section"></section>
       <section class="about content-section"></section>
     </main>
