--- a/index.html
+++ b/index.html
@@ -161,6 +161,60 @@
         </div>
       </section>
     </main>
-    <footer class="footer content-section"></footer>
+    <footer class="footer content-section">
+      <div class="footer__contacts">
+        <a href="tel:+99995555555" class="header__contacts-link">
+          +9 999 555 5555
+        </a>
+        <a href="mailto:info@sobaka.ge" class="header__contacts-link">
+          info@sobaka.ge
+        </a>
+        <p class="header__contacts-link header__adress">
+          наб. Принсенграхт 263-265,<br />Амстердам
+        </p>
+      </div>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item">
+            <a href="#0" class="footer__menu-link footer__menu-link_active text-link" >главная</a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a  href="#0" class="footer__menu-link text-link" >посмотреть лоты</a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a href="#0" class="footer__menu-link text-link" >об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a href="#0" class="footer__social-link">
+            <img
+              class="footer__social-icon"
+              src="images/yt.svg"
+              alt="Логотип Youtube"
+            />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a href="#0" class="footer__social-link">
+            <img
+              class="footer__social-icon"
+              src="images/vk.svg"
+              alt="Логотип Вконтакте"
+            />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a href="#0" class="footer__social-link">
+            <img
+              class="footer__social-icon"
+              src="images/pinterest.svg"
+              alt="Логотип Pinterest"
+            />
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
