--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       <nav>
         <ul class="header__menu-list">
           <li class="header__menu-item header__links-list-item_no-bullit">
-            <a href="#0" class="header__link_active"> главная </a>
+            <a href="#0" class="header__link header__link_active"> главная </a>
           </li>
-          <li>
+          <li class="header__menu-item">
             <a href="#0" class="header__link"> посмотреть лоты </a>
           </li>
-          <li>
+          <li class="header__menu-item">
             <a href="#0" class="header__link"> об аукционе </a>
           </li>
         </ul>
@@ -31,7 +31,7 @@
           alt="Логотип проекта"
         />
       </a>
-      <div class="header__contacts">
+      <address class="header__contacts">
         <a href="tel:+99995555555" class="header__contacts-link">
           +9 999 555 5555
         </a>
@@ -41,7 +41,7 @@
         <p class="header__contacts-link header__adress">
           наб. Принсенграхт 263-265,<br />Амстердам
         </p>
-      </div>
+      </address>
     </header>
     <main class="content">
       <section class="cover content-section">
@@ -62,12 +62,14 @@
         </h1>
         <div class="form-content">
           <div class="form-item">
-            <span class="text-style text"
-              >Аукцион вещей, в которые никто не верил</span
-            >
+            <p class="text-style text">
+              Аукцион вещей, в которые никто не верил
+            </p>
           </div>
           <div class="bet-button">
-            <button class="text-style button">Сделать ставку</button>
+            <button type="submit" class="text-style button">
+              Сделать ставку
+            </button>
           </div>
         </div>
       </section>
@@ -162,27 +164,31 @@
       </section>
     </main>
     <footer class="footer content-section">
-      <div class="footer__contacts">
-        <a href="tel:+99995555555" class="header__contacts-link">
+      <address class="footer__contacts">
+        <a href="tel:+99995555555" class="footer__contacts-link">
           +9 999 555 5555
         </a>
-        <a href="mailto:info@sobaka.ge" class="header__contacts-link">
+        <a href="mailto:info@sobaka.ge" class="footer__contacts-link">
           info@sobaka.ge
         </a>
-        <p class="header__contacts-link header__adress">
-          наб. Принсенграхт 263-265,<br />Амстердам
+        <p class="footer__contacts-link header__adress">
+          наб. Принсенграхт 263-265, Амстердам
         </p>
-      </div>
+      </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
-            <a href="#0" class="footer__menu-link footer__menu-link_active text-link" >главная</a>
+            <a
+              href="#0"
+              class="footer__menu-link footer__menu-link_active text-link"
+              >главная</a
+            >
           </li>
           <li class="footer__menu-list-item">
-            <a  href="#0" class="footer__menu-link text-link" >посмотреть лоты</a>
+            <a href="#0" class="footer__menu-link text-link">посмотреть лоты</a>
           </li>
           <li class="footer__menu-list-item">
-            <a href="#0" class="footer__menu-link text-link" >об аукционе</a>
+            <a href="#0" class="footer__menu-link text-link">об аукционе</a>
           </li>
         </ul>
       </nav>
