--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           alt="Логотип проекта"
         />
       </a>
-      <address class="header__contacts">
+      <address class="contacts">
         <a href="tel:+99995555555" class="header__contacts-link">
           +9 999 555 5555
         </a>
@@ -39,7 +39,7 @@
           info@sobaka.ge
         </a>
         <p class="header__contacts-link header__adress">
-          наб. Принсенграхт 263-265,<br />Амстердам
+          наб. Принсенграхт 263-265, Амстердам
         </p>
       </address>
     </header>
@@ -67,7 +67,7 @@
             </p>
           </div>
           <div class="bet-button">
-            <button type="submit" class="text-style button">
+            <button type="button" class="text-style button">
               Сделать ставку
             </button>
           </div>
@@ -164,7 +164,7 @@
       </section>
     </main>
     <footer class="footer content-section">
-      <address class="footer__contacts">
+      <address class="contacts">
         <a href="tel:+99995555555" class="footer__contacts-link">
           +9 999 555 5555
         </a>
